# high-growth-jobs

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  GEMINI.md  README.md  alembic.ini  docker-compose.yml  main.py  openai_search_source.html  openai_source.html  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/architecture/: architecture.md  current_state.md  data_flow_diagram.md  deployment_and_security.md  logging_strategy.md  scraping_strategy.md  scripts_guide.md
migrations/: env.py
migrations/versions/: 21951a5d4784_add_extracted_description_to_jobdetails.py  2e05ed1016ca_add_is_stub_to_vcfirm.py  3efff8188b58_add_needs_deep_scrape_and_job_details.py  4a9a5351c9f0_initial_schema.py  8098a92b5d5e_add_last_content_hash_to_company.py  8b554d7c87cf_add_last_scraped_at_to_company.py  9e355cba9a88_add_career_url_to_company.py  a1be32f76b8a_add_growth_signals_to_company_model.py  b50f6f783baa_add_executionlog_and_jobdetails.py  bd6ebe140987_epic_2_add_junction_table_and_.py  d56b5de5b389_add_crunchbase_columns.py  d5cc891eceda_make_company_website_url_nullable_and_.py  deb1bc041c13_add_vcfirm.py
scripts/: ai_pre_commit.py  analyze_duplicates.py  analyze_migration.py  check_db_status.py  check_models.py  cleanup_duplicates.py  cleanup_duplicates_v2.py  clear_all_jobs.py  debug_openai.py  debug_openai_search.py  enrich_jobs.py  fix_hash_sql.py  fix_urls.py  import_companies_csv.py  import_vcfirms_csv.py  ingest_axios_prorata.py  janitor.py  janitor_run.py  nullify_websites.py  scrape_company.py  seed_data.py  seed_dummy_jobs.py  seed_vcs.py  test_db_connection.py  test_gemini_connection.py  test_gemini_connection_v2.py  test_gemini_connection_v3.py  test_gemini_connection_v4.py  test_janitor.py  test_scrape.py  test_seed_scrape.py
scripts/data/: crunchbase_companies_968.csv  crunchbase_companies_new_10_May23.csv  crunchbase_companies_new_11_Apr20.csv  crunchbase_companies_new_12_Mar12.csv  crunchbase_companies_new_13_Feb2.csv  crunchbase_vc_firms_830.csv  (+12 more)
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
(+83 files in other folders)
