[project]
name = "high-growth-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "openai>=2.26.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "playwright==1.48.0",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
]
